--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -20,7 +20,6 @@
   }
   
   .header-nav {
-
     display: flex;
     justify-content: space-evenly;
   }
@@ -112,4 +111,8 @@
 width: 100vw;
 
  }
- 
+ .search form{
+
+  display: flex;
+
+ }
